Lang applied in cars views

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -3,11 +3,37 @@
   "Welcome to EasyCar":  "Welcome to EasyCar",
   "Rating": "Rating",
   "Delete": "Delete",
-  "Check review": "Check review",
   "Reviews": "Reviews",
   "Create Review": "Create Review",
   "Enter review": "Enter review",
   "Enter rating": "Enter rating",
   "Send": "Send",
-  "Successfully created": "Successfully created"
+  "Successfully created": "Successfully created",
+  "Create Car": "Create Car",
+  "Image": "Image",
+  "Transmission":"Transmission",
+  "Automatic": "Automatic",
+  "Mechanic": "Mechanic",
+  "Triptonic": "Triptonic",
+  "Type of Vehicle": "Type of Vehicle",
+  "Van": "Van",
+  "Sedan": "Sedan",
+  "Truck": "Truck",
+  "SUV": "SUV",
+  "Coupe": "Coupe",
+  "Manufacture year": "Manufacture year",
+  "Mark if the car is new": "Mark if the car is new",
+  "Mark if the car is available": "Mark if the car is available",
+  "Enter color": "Enter color",
+  "Enter kilometers": "Enter kilometers",
+  "Enter price": "Enter price",
+  "Cars": "Cars",
+  "Check Car": "Check Car",
+  "Color": "Color",
+  "Price": "Price",
+  "Kilometers": "Kilometers",
+  "New Model": "New Model",
+  "Used car": "Used Car",
+  "Available": "Available",
+  "No Available": "No Available"
 }
