Fix typo + remove trailing white spaces

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -35,5 +35,5 @@
   "New Model": "New Model",
   "Used car": "Used Car",
   "Available": "Available",
-  "No Available": "No Available"
+  "Not Available": "Not Available"
 }
