Adding car_model_id to create view

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -49,5 +49,7 @@
   "Car Model": "Car Model",
   "Details": "Details",
   "Content": "Content",
-  "Auth": "Auth"
+  "Auth": "Auth",
+  "Car Models" : "Car Models"
+
 }
