Showing car brand and model in the index view

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -49,7 +49,6 @@
   "Car Model": "Car Model",
   "Details": "Details",
   "Content": "Content",
-  "Auth": "Auth",
-  "Car Models" : "Car Models"
+  "Auth": "Auth"
 
 }
