--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -54,4 +54,11 @@
   "Create order": "Create order",
   "No items in cart": "No items in cart",
   "Check out your cars": "Check out your cars"
+  "Publishrequest title": "PublishRequests",
+  "Create publishrequest": "Create PublishRequest",
+  "Message placeholder": "Enter message for admin",
+  "See more": "See more",
+  "Car state": "State",
+  "Message": "Message",
+  "State": "State"
 }
