Implement addToCart funcionality

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -49,6 +49,6 @@
   "Car Model": "Car Model",
   "Details": "Details",
   "Content": "Content",
-  "Auth": "Auth"
-
+  "Auth": "Auth",
+  "Add to cart": "Add to Cart"
 }
