WIP order create view

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -50,5 +50,6 @@
   "Details": "Details",
   "Content": "Content",
   "Auth": "Auth",
-  "Add to cart": "Add to Cart"
+  "Add to cart": "Add to Cart",
+  "Create order": "Create Order"
 }
