--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -53,7 +53,7 @@
   "Add to cart": "Add to cart",
   "Create order": "Create order",
   "No items in cart": "No items in cart",
-  "Check out your cars": "Check out your cars"
+  "Check out your cars": "Check out your cars",
   "Car publish requests": "Car publish requests",
   "Create car publish request": "Create car publish request",
   "Enter message for admin": "Enter message for admin",
