Minor tweak of review presentation

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -48,8 +48,8 @@
   "Enter description": "Enter description",
   "Car Model": "Car Model",
   "Details": "Details",
-  "Content": "Content",
-  "Auth": "Auth",
+  "Review": "Review",
+  "User": "User",
   "Add to cart": "Add to cart",
   "Create order": "Create order",
   "No items in cart": "No items in cart",
