Change color of delete button

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -3,6 +3,7 @@
   "Welcome to EasyCar":  "Welcome to EasyCar",
   "Rating": "Rating",
   "Delete": "Delete",
+  "Delete car": "Delete car",
   "Reviews": "Reviews",
   "Create Review": "Create Review",
   "Enter review": "Enter review",
