More changes to user/publish-request views

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -66,5 +66,9 @@
   "Home": "Home",
   "Logout": "Logout",
   "Register": "Register",
-  "Login": "Login"
+  "Login": "Login",
+  "State": "State",
+  "pending": "pending",
+  "rejected": "rejected",
+  "accpeted": "accepted"
 }
