Allow admins to accept or reject publish requests

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -72,5 +72,6 @@
   "pending": "pending",
   "rejected": "rejected",
   "accpeted": "accepted",
-  "Id": "Id"
+  "Successfully rejected": "Successfully rejected",
+  "Successfully accepted": "Successfully accepted"
 }
