--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -81,5 +81,6 @@
   "Show reviews": "Show reviews",
   "Total": "Total",
   "Price to date": "Price to date",
-  "Check car": "Check car"
+  "Check car": "Check car",
+  "View registered users": "View registered users"
 }
