--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -96,5 +96,7 @@
   "Thanks": "Thanks",
   "Invoice of Order": "Invoice of Order",
   "Date": "Date",
-  "Expiration date": "Expiration date"
+  "Expiration date": "Expiration date",
+  "Average rating": "Average rating",
+  "Top 5 best models": "Top 5 best models"
 }
