--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -86,8 +86,9 @@
   "Edit CarModel": "Edit CarModel",
   "Id": "Id",
   "Insufficient funds": "Insufficient funds",
-  "Model": "Model",
   "Used": "Used",
   "New": "New",
-  "Condition": "Condition"
+  "Condition": "Condition",
+  "EasyCar": "EasyCar",
+  "Invoice to": "Invoice to"
 }
