Just the auth user can download the pdf. The admin don´t have that function

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -90,5 +90,9 @@
   "New": "New",
   "Condition": "Condition",
   "EasyCar": "EasyCar",
-  "Invoice to": "Invoice to"
+  "Invoice to": "Invoice to",
+  "Send to": "Send to",
+  "Invoice number": "Invoice number",
+  "Thanks": "Thanks",
+  "Invoice of Order": "Invoice of Order"
 }
