Add missing lang + increase default balance

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -84,5 +84,6 @@
   "View registered users": "View registered users",
   "Edit Car": "Edit Car",
   "Edit CarModel": "Edit CarModel",
-  "Id": "Id"
+  "Id": "Id",
+  "Insufficient funds": "Insufficient funds"
 }
