Implement basic filtering by query params

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -85,5 +85,9 @@
   "Edit Car": "Edit Car",
   "Edit CarModel": "Edit CarModel",
   "Id": "Id",
-  "Insufficient funds": "Insufficient funds"
+  "Insufficient funds": "Insufficient funds",
+  "Model": "Model",
+  "Used": "Used",
+  "New": "New",
+  "Condition": "Condition"
 }
