--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -94,5 +94,7 @@
   "Send to": "Send to",
   "Invoice number": "Invoice number",
   "Thanks": "Thanks",
-  "Invoice of Order": "Invoice of Order"
+  "Invoice of Order": "Invoice of Order",
+  "Date": "Date",
+  "Expiration date": "Expiration date"
 }
