Implement the form to update the review

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -102,7 +102,8 @@
   "Clear": "Clear",
   "Top 5 most selled models": "Top 5 most selled models",
   "Total sold": "Total sold",
-  "Edit review":"Edit review",
-  "Your review":"Your review",
-  "Rating":"Rating"
+  "Edit review": "Edit review",
+  "Your review": "Your review",
+  "Rating": "Rating",
+  "Edit review":"Edit review"
 }
