Fix style + tweak gui

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -98,5 +98,6 @@
   "Date": "Date",
   "Expiration date": "Expiration date",
   "Average rating": "Average rating",
-  "Top 5 best models": "Top 5 best models"
+  "Top 5 best models": "Top 5 best models",
+  "Clear": "Clear"
 }
