Modified user profile

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -105,4 +105,10 @@
   "Edit review": "Edit review",
   "Your review": "Your review",
   "Rating": "Rating",
+  "Edit review":"Edit review",
+  "View Cars": "View Cars",
+  "View Cars models": "View Cars models",
+  "View my orders": "View my orders",
+  "Orders": "Orders",
+  "View my reviews": "View my reviews"
 }
