--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -100,7 +100,7 @@
   "Average rating": "Average rating",
   "Top 5 best models": "Top 5 best models",
   "Clear": "Clear",
-  "Top 5 most selled models": "Top 5 most selled models",
+  "Top 5 most sold models": "Top 5 most sold models",
   "Total sold": "Total sold",
   "Edit review": "Edit review",
   "Your review": "Your review",
