Improve nav header style

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -110,5 +110,6 @@
   "View Cars models": "View Cars models",
   "View my orders": "View my orders",
   "Orders": "Orders",
-  "View my reviews": "View my reviews"
+  "View my reviews": "View my reviews",
+  "Post your car": "Post your car"
 }
