--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -129,6 +129,9 @@
     "Address": "Direccion",
     "Phone": "Telefono",
     "Cars - EasyCar": "Carros - EasyCar",
-    "Publish requests": "Solicitud de publicacion"
+    "Publish requests": "Solicitud de publicacion",
+    "Choose a language": "Escoge un lenguaje",
+    "Spanish": "Español",
+    "English": "Ingles"
   }
   
