Mistakes with the use of lang fixed

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -132,5 +132,12 @@
   "Publish requests": "Publish requests",
   "Choose a language": "Choose a language",
   "Spanish": "Spanish",
-  "English": "English"
+  "English": "English",
+  "Register now": "Register now",
+  "Register new car model": "Register new car model",
+  "Register new car": "Register new car",
+  "View car publish requests": "View car publish requests",
+  "View car orders": "View car orders",
+  "Order": "Order",
+  "invoice-of-order-":"invoice-of-order-" 
 }
