Lang mistake fixed

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -139,5 +139,6 @@
   "View car publish requests": "View car publish requests",
   "View car orders": "View car orders",
   "Order": "Order",
-  "invoice-of-order-":"invoice-of-order-" 
+  "invoice-of-order-":"invoice-of-order-",
+  "Price range": "Price range"
 }
