--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -139,6 +139,7 @@
     "View car publish requests": "Ver solicitudes de publicacion de carros",
     "View car orders": "Ver ordenes de carros",
     "Order": "Orden",
-    "invoice-of-order-":"factura-de-la-orden-"
+    "invoice-of-order-":"factura-de-la-orden-",
+    "Price range": "Rango de precio"
   }
   
