Implementation for PDF generator

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -140,6 +140,7 @@
     "View car orders": "Ver ordenes de carros",
     "Order": "Orden",
     "invoice-of-order-":"factura-de-la-orden-",
-    "Price range": "Rango de precio"
-  }
-  
+    "Price range": "Rango de precio",
+    "Sales report": "Reporte de ventas"
+}
+
