--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -140,5 +140,6 @@
   "View car orders": "View car orders",
   "Order": "Order",
   "invoice-of-order-":"invoice-of-order-",
-  "Price range": "Price range"
+  "Price range": "Price range",
+  "Sales report": "Sales report"
 }
