Implement admin buttons to download report

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -141,5 +141,7 @@
   "Order": "Order",
   "invoice-of-order-":"invoice-of-order-",
   "Price range": "Price range",
-  "Sales report": "Sales report"
+  "Sales report": "Sales report",
+  "Download sales report PDF": "Download sales report PDF",
+  "Download sales report CSV": "Download sales report CSV"
 }
