--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -141,6 +141,8 @@
     "Order": "Orden",
     "invoice-of-order-":"factura-de-la-orden-",
     "Price range": "Rango de precio",
-    "Sales report": "Reporte de ventas"
+    "Sales report": "Reporte de ventas",
+    "Download sales report PDF": "Descargar reporte de ventas PDF",
+    "Download sales report CSV": "Descargar report de ventas CSV"
 }
 
