--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -143,6 +143,6 @@
     "Price range": "Rango de precio",
     "Sales report": "Reporte de ventas",
     "Download sales report PDF": "Descargar reporte de ventas PDF",
-    "Download sales report CSV": "Descargar report de ventas CSV"
+    "Download sales report CSV": "Descargar reporte de ventas CSV"
 }
 
