Fix style + include lang in the new function

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -143,5 +143,9 @@
   "Price range": "Price range",
   "Sales report": "Sales report",
   "Download sales report PDF": "Download sales report PDF",
-  "Download sales report CSV": "Download sales report CSV"
+  "Download sales report CSV": "Download sales report CSV",
+  "Website": "Website",
+  "Map car repairs": "Map car repairs",
+  "Find car shops": "Find car shops",
+  "Car repair": "Car repair"
 }
