--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -147,5 +147,10 @@
   "Website": "Website",
   "Map car repairs": "Map car repairs",
   "Find car shops": "Find car shops",
-  "Car repair": "Car repair"
+  "Car repair": "Car repair",
+  "Product": "Product",
+  "Size": "Size",
+  "Check Shoe": "Check Shoe",
+  "Shoes": "Shoes",
+  "Allied product": "Allied product"
 }
