--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -147,6 +147,11 @@
     "Website": "Sitio web",
     "Map car repairs": "Mapa reparación de carros",
     "Find car shops": "Encuentra tienda",
-    "Car repair": "Reparación de carros"
+    "Car repair": "Reparación de carros",
+    "Product": "Producto",
+    "Size": "Talla",
+    "Check Shoe": "Ver Zapato",
+    "Shoes": "Zapatos",
+    "Allied product": "Producto aliado"
 }
 
